# citest

./: .gcloudignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile.poetry  Dockerfile.test  LICENSE  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: main.yml
citest/: __init__.py  citest.py
tests/: test_citest.py
