[tool.poetry]
name = "citest"
version = "0.1.0"
description = "Continuous Integration Test"
authors = ["Christopher De Vries <christopher.devries@secunetics.com>"]
packages = [
  { include = "citest" },
]

[tool.poetry.scripts]
cit = 'citest.citest:main'

[tool.poetry.dependencies]
python = "^3.7"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
safety = "^1.9.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
